--- a/tratamento_olist_orders.ipynb
+++ b/tratamento_olist_orders.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "id": "dXNsfeH2d_5z"
       },
@@ -14,7 +14,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {
         "id": "7DNqy44Lej0x"
       },
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {
         "id": "fuqLEKTweoMv"
       },
@@ -87,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "metadata": {
         "id": "CNNyvhR6hcst"
       },
@@ -99,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -134,7 +134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 7,
       "metadata": {
         "id": "k4CaIZEspqVK"
       },
@@ -145,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 8,
       "metadata": {
         "id": "EEB9kTqwgRqv"
       },
@@ -161,7 +161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 9,
       "metadata": {
         "id": "rsK2glZKgXs5"
       },
@@ -182,7 +182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 10,
       "metadata": {
         "id": "at7S_SF37baO"
       },
@@ -193,7 +193,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 11,
       "metadata": {
         "id": "SB5HaHm97qh_"
       },
@@ -204,7 +204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 12,
       "metadata": {
         "id": "3L5yeNTg7vVA"
       },
@@ -223,7 +223,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 13,
       "metadata": {
         "id": "93Lz57Kf7y6S"
       },
@@ -244,7 +244,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 14,
       "metadata": {
         "id": "MiVtVFf08K2D"
       },
@@ -255,7 +255,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 15,
       "metadata": {
         "id": "K-A5v__o8Ped"
       },
@@ -270,7 +270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 16,
       "metadata": {
         "id": "Zq6ht6Kt8bXo"
       },
@@ -281,7 +281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 17,
       "metadata": {
         "id": "t4abIeiA8dSD"
       },
@@ -301,7 +301,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 18,
       "metadata": {
         "id": "nNeEtfbw8ePC"
       },
@@ -312,7 +312,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 19,
       "metadata": {
         "id": "rfXHrt15-EFW"
       },
@@ -329,7 +329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 20,
       "metadata": {
         "id": "3gBpRtR3-Jmf"
       },
@@ -340,7 +340,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 21,
       "metadata": {
         "id": "JNi80vI6-Jzm"
       },
@@ -361,7 +361,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 22,
       "metadata": {
         "id": "9FG6UfKk-Wxs"
       },
@@ -372,7 +372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 23,
       "metadata": {
         "id": "jCcnnwwe-eaq"
       },
@@ -383,7 +383,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 24,
       "metadata": {
         "id": "jdEn35CP-gzZ"
       },
@@ -394,7 +394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 25,
       "metadata": {
         "id": "FDpPYRHC-iNf"
       },
@@ -405,19 +405,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 26,
       "metadata": {
         "id": "s0czCVcY-kZu"
       },
       "outputs": [],
       "source": [
-        "# Join principal: order_items + orders\n",
-        "fato_vendas = df_items.merge(df_orders, on=\"order_id\", how=\"left\")"
+        "# Join principal: order_items + orders + customer_id\n",
+        "fato_vendas = df_items.merge(df_orders[['order_id', 'customer_id', 'order_purchase_timestamp', 'order_delivered_customer_date']], \n",
+        "                             on=\"order_id\", how=\"left\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 27,
       "metadata": {
         "id": "Hxr-qMdf-oKe"
       },
@@ -430,7 +431,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 28,
       "metadata": {
         "id": "UVkMsjy4-qh0"
       },
@@ -443,7 +444,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 29,
       "metadata": {
         "id": "nYRjjL64-tWe"
       },
@@ -452,6 +453,7 @@
         "# Seleciona colunas da fato\n",
         "fato_vendas = fato_vendas[[\n",
         "    \"order_id\",\n",
+        "    \"customer_id\",\n",
         "    \"order_item_id\",\n",
         "    \"product_id\",\n",
         "    \"seller_id\",\n",
@@ -467,7 +469,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 30,
       "metadata": {
         "id": "IRNfns9A-vd_"
       },
@@ -483,7 +485,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 31,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -555,18 +557,7 @@
         "id": "NxBAWYUbQ-Ab",
         "outputId": "646298eb-a0e9-49f6-857f-7c53215d6f57"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "📤 Importando 'dim_cliente.csv' para a tabela 'dim_cliente'...\n",
-            "📤 Importando 'dim_produto.csv' para a tabela 'dim_produto'...\n",
-            "📤 Importando 'dim_vendedor.csv' para a tabela 'dim_vendedor'...\n",
-            "📤 Importando 'dim_tempo.csv' para a tabela 'dim_tempo'...\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": []
     },
     {
@@ -588,18 +579,7 @@
         "id": "Vh6_Ab6XRFzX",
         "outputId": "69b4af7d-4409-4fc5-de08-3569feb02f76"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "634"
-            ]
-          },
-          "execution_count": 45,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": []
     },
     {
@@ -612,17 +592,7 @@
         "id": "YcYD1huURNYJ",
         "outputId": "3dc28b40-ccf7-48d5-b94b-92362a2bdda8"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "✅ Tabela 'dim_tempo' populada com sucesso!\n",
-            "\n",
-            "🏁 Todas as dimensões foram importadas para o banco.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": []
     }
   ],
@@ -631,7 +601,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "venv",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
