--- a/tratamento_olist_orders.ipynb
+++ b/tratamento_olist_orders.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 32,
       "metadata": {
         "id": "dXNsfeH2d_5z"
       },
@@ -14,7 +14,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 33,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 34,
       "metadata": {
         "id": "7DNqy44Lej0x"
       },
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 35,
       "metadata": {
         "id": "fuqLEKTweoMv"
       },
@@ -87,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 36,
       "metadata": {
         "id": "CNNyvhR6hcst"
       },
@@ -99,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 37,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -134,7 +134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 38,
       "metadata": {
         "id": "k4CaIZEspqVK"
       },
@@ -145,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 39,
       "metadata": {
         "id": "EEB9kTqwgRqv"
       },
@@ -161,7 +161,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 40,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Renomear colunas\n",
+        "dim_cliente = dim_cliente.rename(columns={\n",
+        "    \"customer_id\": \"id_cliente\",\n",
+        "    \"customer_unique_id\": \"id_cliente_unico\",\n",
+        "    \"customer_city\": \"cidade_cliente\",\n",
+        "    \"customer_state\": \"estado_cliente\"\n",
+        "})"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 41,
       "metadata": {
         "id": "rsK2glZKgXs5"
       },
@@ -182,7 +197,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 42,
       "metadata": {
         "id": "at7S_SF37baO"
       },
@@ -193,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 43,
       "metadata": {
         "id": "SB5HaHm97qh_"
       },
@@ -204,7 +219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 44,
       "metadata": {
         "id": "3L5yeNTg7vVA"
       },
@@ -223,7 +238,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 45,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Renomear colunas\n",
+        "dim_produto = dim_produto.rename(columns={\n",
+        "    \"product_id\": \"id_produto\",\n",
+        "    \"product_category_name\": \"nome_categoria\",\n",
+        "    \"product_category_name_english\": \"nome_categoria_ingles\",\n",
+        "    \"product_name_lenght\": \"tamanho_nome\",\n",
+        "    \"product_description_lenght\": \"tamanho_descricao\",\n",
+        "    \"product_weight_g\": \"peso_gramas\"\n",
+        "})"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 46,
       "metadata": {
         "id": "93Lz57Kf7y6S"
       },
@@ -244,7 +276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 47,
       "metadata": {
         "id": "MiVtVFf08K2D"
       },
@@ -255,7 +287,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 48,
       "metadata": {
         "id": "K-A5v__o8Ped"
       },
@@ -270,7 +302,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 49,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "dim_vendedor = dim_vendedor.rename(columns={\n",
+        "    \"seller_id\": \"id_vendedor\",\n",
+        "    \"seller_city\": \"cidade_vendedor\",\n",
+        "    \"seller_state\": \"estado_vendedor\"\n",
+        "})"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 50,
       "metadata": {
         "id": "Zq6ht6Kt8bXo"
       },
@@ -281,7 +326,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 51,
       "metadata": {
         "id": "t4abIeiA8dSD"
       },
@@ -301,7 +346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 52,
       "metadata": {
         "id": "nNeEtfbw8ePC"
       },
@@ -312,7 +357,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 53,
       "metadata": {
         "id": "rfXHrt15-EFW"
       },
@@ -329,7 +374,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 54,
       "metadata": {
         "id": "3gBpRtR3-Jmf"
       },
@@ -340,7 +385,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 55,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "dim_tempo = dim_tempo.rename(columns={\n",
+        "    \"data\": \"data\",\n",
+        "    \"ano\": \"ano\",\n",
+        "    \"mes\": \"mes\",\n",
+        "    \"dia\": \"dia\",\n",
+        "    \"dia_semana\": \"dia_da_semana\",\n",
+        "    \"trimestre\": \"trimestre\"\n",
+        "})"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 56,
       "metadata": {
         "id": "JNi80vI6-Jzm"
       },
@@ -361,7 +422,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 57,
       "metadata": {
         "id": "9FG6UfKk-Wxs"
       },
@@ -372,7 +433,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 58,
       "metadata": {
         "id": "jCcnnwwe-eaq"
       },
@@ -383,7 +444,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 59,
       "metadata": {
         "id": "jdEn35CP-gzZ"
       },
@@ -394,7 +455,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 60,
       "metadata": {
         "id": "FDpPYRHC-iNf"
       },
@@ -405,7 +466,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 61,
       "metadata": {
         "id": "s0czCVcY-kZu"
       },
@@ -418,7 +479,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 62,
       "metadata": {
         "id": "Hxr-qMdf-oKe"
       },
@@ -431,7 +492,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 63,
       "metadata": {
         "id": "UVkMsjy4-qh0"
       },
@@ -444,32 +505,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 64,
       "metadata": {
         "id": "nYRjjL64-tWe"
       },
       "outputs": [],
       "source": [
         "# Seleciona colunas da fato\n",
-        "fato_vendas = fato_vendas[[\n",
-        "    \"order_id\",\n",
-        "    \"customer_id\",\n",
-        "    \"order_item_id\",\n",
-        "    \"product_id\",\n",
-        "    \"seller_id\",\n",
-        "    \"price\",\n",
-        "    \"freight_value\",\n",
-        "    \"payment_type\",\n",
-        "    \"payment_value\",\n",
-        "    \"review_score\",\n",
-        "    \"order_purchase_timestamp\",\n",
-        "    \"order_delivered_customer_date\"\n",
-        "]]"
+        "fato_vendas = fato_vendas.rename(columns={\n",
+        "    \"order_id\": \"id_pedido\",\n",
+        "    \"customer_id\": \"id_cliente\",\n",
+        "    \"order_item_id\": \"id_item_pedido\",\n",
+        "    \"product_id\": \"id_produto\",\n",
+        "    \"seller_id\": \"id_vendedor\",\n",
+        "    \"price\": \"preco\",\n",
+        "    \"freight_value\": \"valor_frete\",\n",
+        "    \"payment_type\": \"tipo_pagamento\",\n",
+        "    \"payment_value\": \"valor_pagamento\",\n",
+        "    \"review_score\": \"nota_avaliacao\",\n",
+        "    \"order_purchase_timestamp\": \"data_compra\",\n",
+        "    \"order_delivered_customer_date\": \"data_entrega\"\n",
+        "})\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 65,
       "metadata": {
         "id": "IRNfns9A-vd_"
       },
@@ -485,7 +546,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 66,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -601,7 +662,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "venv",
       "language": "python",
       "name": "python3"
     },
